--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "crypto-js": "^3.1.9-1",
     "sass-loader": "^7.0.1",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "coffeescript": "^2.3.0",
     "css-loader": "^0.28.11",
     "style-loader": "^0.21.0",
-    "coffee-loader": "^0.9.0"
+    "coffee-loader": "^0.9.0",
+    "superagent": "^3.8.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
