--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
-    "crypto-js": "^3.1.9-1",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "coffeescript": "^2.3.0",
-    "css-loader": "^0.28.11",
-    "style-loader": "^0.21.0",
     "coffee-loader": "^0.9.0",
-    "superagent": "^3.8.3"
+    "coffeescript": "^2.3.0",
+    "crypto-js": "^3.1.9-1",
+    "css-loader": "^0.28.11",
+    "npm": "^6.1.0",
+    "style-loader": "^0.21.0",
+    "superagent": "^3.8.3",
+    "uglifyjs-webpack-plugin": "^1.2.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
