--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "npm": "^6.1.0",
     "style-loader": "^0.21.0",
     "superagent": "^3.8.3",
-    "uglifyjs-webpack-plugin": "^1.2.7"
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "es6-promise": "^4.2.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
