--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "name": "bootpay-js",
-  "version": "2.0.12",
+  "version": "2.0.13",
   "description": "Bootpay Javasrcipt Library",
-  "main": "lib/bootpay.coffee",
+  "main": "lib/bootpay.js",
   "devDependencies": {
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^3.1.3",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.3.1",
-    "crypto-js": "^3.1.9-1",
     "css-loader": "^0.28.11",
-    "npm": "^6.1.0",
     "style-loader": "^0.21.0",
-    "superagent": "^3.8.3",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "es6-promise": "^4.2.5"
+    "uglifyjs-webpack-plugin": "^1.2.7"
+  },
+  "dependencies": {
+    "coffee": "^5.1.0",
+    "coffee-script": "^1.12.7",
+    "crypto-js": "^3.1.9-1",
+    "es6-promise": "^4.2.5",
+    "npm": "^6.1.0",
+    "superagent": "^3.8.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "coffee -o lib/ -c lib/bootpay.coffee"
   },
   "repository": {
     "type": "git",
