--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "name": "bootpay-js",
-  "version": "2.0.13",
+  "version": "2.0.14",
   "description": "Bootpay Javasrcipt Library",
   "main": "lib/bootpay.js",
   "devDependencies": {
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3",
+    "@babel/preset-env": "^7.2.0",
     "coffee-loader": "^0.9.0",
-    "coffeescript": "^2.3.1",
+    "coffeescript": "^2.3.2",
     "css-loader": "^0.28.11",
     "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "^1.2.7"
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
-    "coffee": "^5.1.0",
-    "coffee-script": "^1.12.7",
+    "babel-cli": "^6.26.0",
     "crypto-js": "^3.1.9-1",
     "es6-promise": "^4.2.5",
     "npm": "^6.1.0",
     "superagent": "^3.8.3"
   },
   "scripts": {
-    "prepublish": "coffee -o lib/ -c lib/bootpay.coffee"
+    "prepublish": "coffee --transpile -o lib/ -c lib/bootpay.coffee"
   },
   "repository": {
     "type": "git",
