npm coffeescript loader 없이 import 가능하도록 변경

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "superagent": "^3.8.3"
   },
   "scripts": {
-    "prepublish": "coffee --transpile -o lib/ -c lib/bootpay.coffee"
+    "prepublish": "coffee --transpile -o lib/ -c lib/*.coffee"
   },
   "repository": {
     "type": "git",
