--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootpay-js",
-  "version": "2.1.0-beta1",
+  "version": "2.1.0",
   "description": "Bootpay Javasrcipt Library",
   "main": "lib/bootpay.js",
   "files": [
