--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootpay-js",
-  "version": "3.0.0",
+  "version": "3.0.0-beta1",
   "description": "Bootpay Javasrcipt Library",
   "main": "lib/bootpay.js",
   "files": [
@@ -8,17 +8,17 @@
   ],
   "devDependencies": {
     "coffee-loader": "^0.9.0",
-    "coffeescript": "^2.3.2",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.3",
-    "css-loader": "^0.28.11",
-    "style-loader": "^0.21.0"
+    "coffeescript": "^2.4.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1",
+    "css-loader": "^2.1.1",
+    "style-loader": "^0.23.1"
   },
   "dependencies": {
     "babel-core": "^6.26.3",
-    "es6-promise": "^4.2.5",
+    "es6-promise": "^4.2.6",
     "babel-preset-es2015": "^6.24.1",
     "babel-cli": "^6.26.0",
     "crypto-js": "^3.1.9-1",
