--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootpay-js",
-  "version": "3.0.0-beta1",
+  "version": "3.0.1",
   "description": "Bootpay Javasrcipt Library",
   "main": "lib/bootpay.js",
   "files": [
@@ -11,7 +11,7 @@
     "coffeescript": "^2.4.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
     "css-loader": "^2.1.1",
     "style-loader": "^0.23.1"
@@ -23,7 +23,7 @@
     "babel-cli": "^6.26.0",
     "crypto-js": "^3.1.9-1",
     "npm": "^6.1.0",
-    "superagent": "^3.8.3"
+    "superagent": "^5.0.5"
   },
   "scripts": {
     "prepublish": "./prepublish.sh"
