--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.2.6",
     "babel-preset-es2015": "^6.24.1",
     "babel-cli": "^6.26.0",
