--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootpay-js",
-  "version": "3.2.1",
+  "version": "3.2.1-beta1",
   "description": "Bootpay Javasrcipt Library",
   "main": "lib/bootpay.js",
   "files": [
