개발 환경 변경 및 version 3.3.3 업데이트

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,7 @@ services:
       - ./:/var/www/
     ports:
       - "10011:3001"
+    hostname: bootpay-js-v1
+    container_name: bootpay-js-v1
     extra_hosts:
       "test-database": 10.0.100.2
